--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,7 +3,9 @@
 }
 
 body {
-  background-color: steelblue;
+  background-image: url("../images/taxi.jpg");
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 h1 {
@@ -24,16 +26,12 @@ h3 {
   margin: 10px;
   font-family: "Apple Color Emoji", cursive;
   font-size: 20px;
+  font-weight: bolder;
 }
 
-h4 {
-  font-family: "Agency FB", cursive;
-  font-size: 15px;
-}
 
 .container {
   flex: 1;
-  width: auto;
   padding: 10px;
 }
 
